fixed nav bar spacing in tablet mode

--- a/css/main.css
+++ b/css/main.css
@@ -531,13 +531,15 @@ input[type="button"] {
 
   /* Header */
   header {
-    /* justify-content: space-around; */
+    justify-content: space-around;
     padding: 33px 0;
   }
 
   header .content-wrapper {
+    
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
+    
   }
 
   header figure {
@@ -545,11 +547,13 @@ input[type="button"] {
   }
 
   header nav {
-    width: 20%;
+    width: 30%;
   }
 
-  header nav ul {
-    justify-content: space-between;
+    header nav ul {
+    justify-content: space-around;
+    padding: 0 20px;
+   
   }
 
   .header-divider {
